# lcd_therm

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  expander.c  i2c_bus.c  idf_component.yml  lv_port.c  main.c  rtc.c  temp_sensor.c  ui.c  weather.c  wifi.c  wifi_manager.c
main/fonts/: material_32.c  weather_24.c  weather_32.c  weather_40.c  weather_48.c  weather_60.c
main/include/: app_settings.h  expander.h  i2c_bus.h  lcd.h  lv_port.h  main.h  rtc.h  temp_sensor.h  ui.h  weather.h  weather_icons.h  wifi.h  wifi_icons.h  wifi_manager.h
main/include/fonts/: lcd_therm_fonts.h  material_32.h  weather_32.h
main/include/images/: lcd_therm_images.h
main/ui/: settings.c  settings_ui.c  slider.c  slider_ui.c  styles.c  styles_ui.c  subjects.c  subjects_ui.c  ui.c  wifi_ui.c
main/ui/include/: settings.h  settings_ui.h  slider_ui.h  styles_ui.h  subjects_ui.h  wifi_ui.h
