idf_component_register(
                        SRCS
                          "main.c"
                          "lv_port.c"
                          "expander.c"
                          "i2c_bus.c"
                          "rtc.c"
                          "temp_sensor.c"
                          "fonts/weather_32.c"
                          "fonts/weather_24.c"
                          "fonts/weather_40.c"
                          "fonts/weather_48.c"
                          "fonts/weather_60.c"
                          "fonts/material_32.c"
                          "images/frans.c"
                          "images/liquid.c"
                          "images/mountain.c"
                          "images/winter.c"
                          "images/thekid.c"
                          "ui/slider.c"
                          "ui/ui.c"
                          "ui/styles.c"
                          "ui/settings.c"
                          "ui/subjects.c"
                        INCLUDE_DIRS "./include" "./ui/include"
                        REQUIRES
                          esp_common
                          log
                          nvs_flash
                          esp_wifi
                          esp_http_client
                          esp_driver_i2c
                          esp_lcd
                          esp_driver_gpio
                          esp_event
                          esp_netif
)

